--- a/UpdateServer/index.html
+++ b/UpdateServer/index.html
@@ -26,7 +26,7 @@
                         <div class="form-group">   
                             <label for="appName" class="col-sm-2 control-label">Application Process</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="appName" id="appName" placeholder="Please enter AppName" value="TestApp" required/>
+                                <input type="text" class="form-control" name="appName" id="appName" placeholder="Please enter AppName" value="HHUpdate.Test" required/>
                             </div>
                         </div>
                         <div class="form-group">
