--- a/UpdateServer/index.html
+++ b/UpdateServer/index.html
@@ -1,78 +1,88 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Application Update Server</title>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Application Update Server</title>
+  <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1></h1> 
-    <div class="container">
-        <div class="row">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h1 class="panel-title">Create new version</h1>
+  <h1></h1>
+  <div class="container">
+    <div class="row">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h1 class="panel-title">Create new version</h1>
+        </div>
+        <div class="panel-body">
+          <form action="/api/app?appKey=me.eassist.dental" method="POST" class="form-horizontal"
+            enctype="multipart/form-data" role="form">
+            <div class="form-group">
+              <label for="appId" class="col-sm-2 control-label">Application Id</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" name="appId" id="appId" placeholder="Please enter AppId"
+                  value="test-app" required />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="appName" class="col-sm-2 control-label">Application Process</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" name="appName" id="appName" placeholder="Please enter AppName"
+                  value="HHUpdate.Test" required />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="versionName" class="col-sm-2 control-label">Application Version</label>
+              <div class="col-sm-10">
+                <div class="input-group">
+                  <div class="input-group-addon">V</div>
+                  <input type="text" class="form-control" id="appVersion" name="appVersion"
+                    placeholder="Please enter AppVersion" value="1.0.0.1" required />
                 </div>
-                <div class="panel-body">          
-                    <form action="/api/app?appKey=me.eassist.dental" method="POST" class="form-horizontal" enctype="multipart/form-data" role="form">
-                        <div class="form-group">
-                            <label for="appId" class="col-sm-2 control-label">Application Id</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="appId" id="appId" placeholder="Please enter AppId" value="test-app" required />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="appName" class="col-sm-2 control-label">Application Process</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="appName" id="appName" placeholder="Please enter AppName" value="HHUpdate.Test" required />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="versionName" class="col-sm-2 control-label">Application Version</label>
-                            <div class="col-sm-10">
-                                <div class="input-group">
-                                    <div class="input-group-addon">V</div>
-                                    <input type="text" class="form-control" id="appVersion" name="appVersion" placeholder="Please enter AppVersion" value="1.0.0.1" required />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="appFile" class="col-sm-2 control-label">Upload Zip Package</label>
-                            <div class="col-sm-10">
-                                <input type="file" name="file" id="appFile" placeholder="Please upload Update.zip" value="" required />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Select Update Mode</label>
-                            <div class="col-sm-10">
-                                <label for="updateMode1" class="radio-inline">
-                                    <input type="radio" name="updateMode" id="updateMode1" placeholder="Please select UpdateMode" value="1" checked /> Cover
-                                </label>
-                                <label for="updateMode2" class="radio-inline">
-                                    <input type="radio" name="updateMode" id="updateMode2" placeholder="Please select UpdateMode" value="2" /> New Install
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="upgradeInfo" class="col-sm-2 control-label">Version Description</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" name="versionDesc" id="versionDesc" rows="5" placeholder="Please enter Description" required>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="appFile" class="col-sm-2 control-label">Upload Zip Package</label>
+              <div class="col-sm-10">
+                <input type="file" name="file" id="appFile" placeholder="Please upload Update.zip" value="" required />
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Select Update Mode</label>
+              <div class="col-sm-10">
+                <label for="updateMode1" class="radio-inline">
+                  <input type="radio" name="updateMode" id="updateMode1" placeholder="Please select UpdateMode"
+                    value="1" checked /> Cover
+                </label>
+                <label for="updateMode2" class="radio-inline">
+                  <input type="radio" name="updateMode" id="updateMode2" placeholder="Please select UpdateMode"
+                    value="2" /> New Install
+                </label>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="upgradeInfo" class="col-sm-2 control-label">Version Description</label>
+              <div class="col-sm-10">
+                <textarea class="form-control" name="versionDesc" id="versionDesc" rows="5"
+                  placeholder="Please enter Description" required>
 Add updater for your application at first time.
 </textarea>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                                <button type="reset" class="btn btn-default">Cancel</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div> 
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="reset" class="btn btn-default">Cancel</button>
+              </div>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 </body>
+
 </html>
