--- a/UpdateServer/index.html
+++ b/UpdateServer/index.html
@@ -18,8 +18,7 @@
           <h1 class="panel-title">Create new version</h1>
         </div>
         <div class="panel-body">
-          <form action="/api/app?appKey=me.eassist.dental" method="POST" class="form-horizontal"
-            enctype="multipart/form-data" role="form">
+          <form action="/api/app" method="POST" class="form-horizontal" enctype="multipart/form-data" role="form">
             <div class="form-group">
               <label for="appId" class="col-sm-2 control-label">Application Id</label>
               <div class="col-sm-10">
